Adding improvements to the management console functionality.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -5,313 +5,12 @@ Analytics
 {% endblock %}
 
 {% block  js_css_include %}
-
-
-<!--[if lt IE 8]><link rel="stylesheet" href="{% url static 'css/blueprint/ie.css' %}" type="text/css" /><![endif]-->
-<link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
-
-
-<!--<link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/base.css' %}">-->
-<!--<link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/header.css' %}">-->
-<link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/content.css' %}">
-<script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>	
-<script src="http://www.google.com/jsapi" type="text/javascript"></script> 
-<script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
-<script type="text/javascript" src="{% url static 'javascript/jquery.tooltip.js' %}" ></script>
-<link rel="stylesheet" type="text/css" href="{% url static 'css/jquery.tooltip.css' %}">	
+{% include "analytics_jsinclude.html" %}
 {% endblock %}
 
 
 
 
 {% block site-content %}
-
-		<!-- Top Pic -->
-		<div id="top">
-		        <!-- Title -->
-			<div id="title">{{campaign.title}}</div>
-			<div id="topSum"><h2>Reached <b>{{total_reach}}</b> people from <b>{{total_shares}}</b> shares</h2></div>			     
-			
-
-<!-- Nav bar -->
-<div id="panelNav">
-<div id="selectDiv">
-  <span>Campaign: </span><span id="selectCampaign">{{campaign.title}}</span>
-</div>
-				
-<div id="dateDiv">			
-        <select id="chart-date-type">
-	  <option selected="yes" value="days">Days</option>
-	 </select>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	<select id="chart-date-distribution">
-	  <option value="1">1</option>
-	  <option value="2">2</option>
-	  <option value="3">3</option>
-	  <option value="4">4</option>
-	  <option value="5">5</option>
-	  <option value="6">6</option>
- 	  <option value="7">7</option>
-	  <option value="8">8</option>
-	  <option value="9">9</option>
-	  <option selected="yes" value="10">10</option>
-	  <option value="11">11</option>
-	  <option value="12">12</option>
-	  <option value="13">13</option>
-	  <option value="14">14</option>
-	  <option value="15">15</option>
-	  <option value="16">16</option>
-	  <option value="17">17</option>
-	  <option value="18">18</option>
-	  <option value="19">19</option>
-	  <option value="20">20</option>
-          <option value="21">21</option>
-	  <option value="22">22</option>
-	  <option value="23">23</option>
-	  <option value="24">24</option>
-	  <option value="25">25</option>
-	  <option value="26">26</option>
-	  <option value="27">27</option>
-	  <option value="28">28</option>
-	  <option value="29">19</option>
-	  <option value="30">30</option>
-	  <option value="31">31</option>
-	  <option value="32">32</option>
-	  <option value="33">33</option>
-	  <option value="34">34</option>
-	  <option value="35">35</option>
-	 </select>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	<button id="reload-bar-chart">Reload Date Distribution</button>
-
-	
-        </div>
-<!-- Nav bar end-->
-</div>
-
-			<!-- Reach pic -->
-			<div id="topPic">
-			     <div id="date_line_chart"></div>
-			</div>
-			<!-- End Reach-->
-
-			<div id="botPic">
-			     <div id="botTitle">Breakdown of Sources</div>
-			    
-			     <!-- Column Pic -->
-			     <div id="botLeftPic">
-			          <div id="date_column_chart"></div>  
-			     </div>
-			     <!-- End Column -->
-			    
-			     <!-- Pie Pic -->
-			     <div id="botRightPic">
-			          <div id="pie_sources"></div>      
-			     </div>
-			     <!-- End Pie -->
-			</div>
-		<!--end top pic -->		
-		</div>
-		
-		<div id="mid">
-		     <div id="influenceTitle">Top Influencers</div>
-		     <!-- Influencers -->
-		     <div id="midLeft">
-		          <div id="tableHeader">Sort By</div>
-			  <script src="http://connect.facebook.net/en_US/all.js"></script>
-			  <div id="fb-root"></div>
-			  <div id="table_analytics_data"></div>
-	            </div>
-		<!-- end influencers -->
-		
-		    <div id="midRight"><= Select a user to see more information...</div>
-		</div>
-
-			     
-	 <div id="stats">	
-	 <p id="total_fshares" title="Total number of Shares for this promotion on facebook.">Total Facebook Shares: &nbsp; {{total_facebook_shares}}</p>
-   	 <p id="total_tshares" title="Total number of tweets for this promotion on twitter.">Total Twitter Shares: &nbsp; {{total_twitter_shares}}</p>
-	 <p id="total_freach" title="Total number of people to potentially see this <br/>share on facebook. (Total Facebook Impressions)">Total Facebook Reach: &nbsp; {{total_facebook_reach}}</p>
-	 <p id="total_treach" title="Total number of people to potentially see this <br/>share on facebook. (Total Twitter Impressions)">Total Twitter Reach: &nbsp; {{total_twitter_reach}}</p>
-	 <p id="total_page_views" title="Total number of times this promotion has been clicked on.">Total Page Views: &nbsp; {{campaign.page_views_total}}</p>
-	 <p id="total_top_page_views" title="Total number the top level page has been clicked on. (Not shared or referred)">Top Level Page Views: &nbsp; {{campaign.page_views}}</p>
-	 </div>
-    
-	<div style="width: 100%;"><br/><br/><br/></div>
-
-	<script> 
-	      
-             $('#stats p').tooltip();
-	  
-	      //$("#date_column_chart").showLoading({'afterShow': function(){ setTimeout( "jQuery('#date_column_chart').hideLoading()", 2000 );}});
-	      //$("#midRight").showLoading({'afterShow': function(){ setTimeout( "jQuery('#midRight').hideLoading()", 2000 );}});         
-              //$("#date_line_chart").showLoading({'addClass': 'loading-indicator-bars',
-              //                                   'afterShow': function(){ setTimeout( "jQuery('#date_line_chart').hideLoading()", 2000 );}});
-
-	      FB.init({appId: '{{fbappid}}', status: true, cookie: true, xfbml: true});
-	      google.load("visualization", "1", {packages:["table", "piechart", "corechart"]});
-	      google.setOnLoadCallback(drawGraphs);
-
-	      function drawTable() {
-	           var cssClassNames = {
-		        'headerRow': 'headerRow',
-			'tableRow': 'tableRow',
-			'oddTableRow': 'oddTableRow',
-			'selectedTableRow': 'selectedTableRow',
-			'hoverTableRow': 'hoverTableRow',
-			'headerCell': 'headerCell',
-			'tableCell': 'tableCell',
-			'rowNumberCell': 'rowNumCell'
-		   };
-		   var data_table = new google.visualization.Table(document.getElementById('table_analytics_data'));
-		   $.ajax({
-		        url: '{% url analytics_data %}?campaign={{campaign.id}}', 
-			     data: {},
-	                     dataType: "json", 
-			     success: function(data) {
-			          var json_data = new google.visualization.DataTable(data.data, 0.5);
-				  json_data.sort({column: 3, desc: true})
-                                  var formatter = new google.visualization.PatternFormat('{0} <span class=\"lightLink\">(more)</span>');
-                                  formatter.format(json_data, [1]);
-				  var formatter = new google.visualization.PatternFormat('<p class=\"light\">reach</p>{0}');
-                                  formatter.format(json_data, [4]);
-				  var formatter = new google.visualization.PatternFormat('<p class=\"light\">shares</p>{0}');
-                                  formatter.format(json_data, [7]);
-                                  var formatter = new google.visualization.PatternFormat('<p class=\"light\">shares</p>{0}');
-                                  formatter.format(json_data, [6]);
-                                  var formatter = new google.visualization.PatternFormat('<p class=\"light\">clicks</p>{0}');
-                                  formatter.format(json_data, [9]);
-
-				  var view = new google.visualization.DataView(json_data);
-				  view.hideColumns([2,3,8]);
-				  // Render Table
-				  var options = {};
-				  options['page'] = 'enable';
-				  options['pageSize'] = 10;
-				  options['allowHtml'] = true;
-				  options['cssClassNames'] = cssClassNames;
-				  data_table.draw(view, options);
-				  data_table.draw(view, options);
-
-				  // Setup Listener
-				  google.visualization.events.addListener(data_table, 'select', function() {
-				       var row = data_table.getSelection()[0].row;
-				       showUserData(json_data.getValue(row, 0),
-				                    json_data.getValue(row, 1),
-				  		    json_data.getValue(row, 2),
-				  		    json_data.getValue(row, 3),
-				  		    json_data.getValue(row, 4),
-				  		    json_data.getValue(row, 5),
-				  		    json_data.getValue(row, 6),
-				  		    json_data.getValue(row, 7),
-				  		    json_data.getValue(row, 8)
-				       );
-			          });
-                                  jQuery('#midRight').hideLoading();
-                                  jQuery('#date_column_chart').hideLoading();
-			     },
-			     beforeSend: function() {
-                                 $("#midRight").showLoading();         
-                                 $("#date_column_chart").showLoading();
-                             }
-			}); 
-
-		}
-
-		function drawPie(range_type, range_duration) {
-			var data_table = new google.visualization.PieChart(document.getElementById('pie_sources'));
-			$.ajax({
-				url: '{% url analytics_sources_pie %}?range_type=' + range_type + '&range_duration=' + range_duration + '&campaign={{campaign.id}}', 
-				dataType: "json",
-				data: {},
-				success: function(data) {
-					var json_data = new google.visualization.DataTable(data.data, 0.5);
-					data_table.draw(json_data, 
-					     {width:250, height:200,
-					     is3D: true});
-				},
-				beforeSend: function() {
-
-				}
-			});		
-		}
-
-		function drawDateColumnShare(range_type, range_duration){
-
-	  		// Create and draw the visualization.
-	  		var data_table = new google.visualization.ColumnChart(document.getElementById('date_column_chart'));
-			$.ajax({
-				url: '{% url analytics_date_range_shares %}?range_type=' + range_type + '&range_duration=' + range_duration + '&campaign={{campaign.id}}', 
-				dataType: "json",
-				data: {},
-				success: function(data) {
-					var json_data = new google.visualization.DataTable(data.data, 0.5);
-					data_table.draw(json_data,
-			           	     {width:710, height:200,
-			            	      //hAxis: {title: data.range_type_label, titleColor: "red"}
-					});
-				},
-				beforeSend: function() {
-
-				}
-			});
-		}
-
-		function drawDateLineReach(range_type, range_duration){
-
-	  		// Create and draw the visualization.
-	  		var data_table = new google.visualization.LineChart(document.getElementById('date_line_chart'));
-			$.ajax({
-				url: '{% url analytics_date_range_reach %}?range_type=' + range_type + '&range_duration=' + range_duration + '&campaign={{campaign.id}}', 
-				dataType: "json",
-				data: {},
-				success: function(data) {
-				        var json_data = new google.visualization.DataTable(data.data, 0.5);
-
-					data_table.draw(json_data,
-	                                {allowHtml : true,
-			           	title : "Total Reach", 
-			            	width:950, height:200,
-			            	//hAxis: {title: data.range_type_label, titleColor: "red"}
-					displayLegendValues : false
-					});
-				},
-				beforeSend: function() {
-
-				}
-			});
-		}
-
-
-		function drawGraphs() {
-			drawTable();	                
-			drawPie($('#chart-date-type :selected').val(), $('#chart-date-distribution :selected').val());
-			drawDateColumnShare($('#chart-date-type :selected').val(), $('#chart-date-distribution :selected').val());
-			drawDateLineReach($('#chart-date-type :selected').val(), $('#chart-date-distribution :selected').val());
-		}
-
-		$('#reload-bar-chart').click(function(){
-			drawPie($('#chart-date-type :selected').val(), $('#chart-date-distribution :selected').val());
-			drawDateColumnShare($('#chart-date-type :selected').val(), $('#chart-date-distribution :selected').val());
-			drawDateLineReach($('#chart-date-type :selected').val(), $('#chart-date-distribution :selected').val());
-		});
-
-		function showUserData(pic, name, link, followers, reach, shares, reshares, totalShares, network) {
-		        var html_str = "";
-			html_str += "<a href=\'" + link + "\'>" + pic + "</a>";
-			if (network == "Twitter") {
-			      var pplTag = "Followers";
-			} else {
-			      var pplTag = "Friends";
-			} 
-	                
-			html_str += "<div class=\'tt" + pplTag + "\'>" + pplTag + ": <b>"+followers+"</b></div>";
-			html_str += "<div class=\'shares\'>Number of times shared: <b>"+shares+"</b></div>";
-			html_str += "<div class=\'reshares\'>Number of times reshared by " + pplTag + ": <b>"+reshares+"</b></div>";
-			html_str += "<div class=\'rereshares\'>Total number of shares: <b>"+ totalShares + "</b></div>";
-			html_str += "<div class=\'reach\'>Total reach: <b>"+reach+"</b></div>";
-			$('#midRight').html(html_str);
-		}
-	    </script>
-
+{% include "analytics_content.html" %}
 {% endblock %}
