--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -13,9 +13,12 @@
 {% block site-content %}
 <br/><br/><br/>
 
-<div id="admin_console" class="create">
+<div id="admin-header">
 <h1>Admin Console</h1>
 <h4 style="text-align:center;">Promotion Type - {{campaign.campaign_type}}</h4>
+</div>
+<div id="admin_console" class="create">
+
 
 <ul>
 <li>
