--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -15,8 +15,10 @@
 <br/><br/><br/>
 
 <div id="admin_console2">
+<div id="admin-header">
 <h1>Admin Console</h1>
 <h4 style="text-align:center;">Promotion Type - {{campaign.campaign_type}}</h4>
+</div>
 <br/><br/><br/>
 
 <ul class="tabs">
@@ -28,11 +30,10 @@
 
 <!-- tab "panes" -->
 <div class="panes">
-  <div><iframe src ="{{landing_url}}" width="100%" height="800"></iframe></div>
-
-  <div><iframe src ="{{update_url}}" width="100%" height="800"></iframe></div>
-  <div><iframe src ="{{widget_url}}" width="100%" height="800"></iframe></div>
-  <div><iframe src ="{{analytics_url}}" width="100%" height="800"></iframe></div>
+  <div><iframe src ="{{landing_url}}" width="100%" height="1200"></iframe></div>
+  <div><iframe src ="{{update_url}}" width="100%" height="1200"></iframe></div>
+  <div><iframe src ="{{widget_url}}" width="100%" height="1200"></iframe></div>
+  <div><iframe src ="{{analytics_url}}" width="100%" height="1200"></iframe></div>
 </div>
 </div>
 
