--- a/static/css/campaign_admin.css
+++ b/static/css/campaign_admin.css
@@ -1,5 +1,20 @@
+body {
+        font-family:Constantina,Georgia,'Nimbus Roman No9 L',serif;
+}
+
 h1 {
    text-align: center;
+}
+
+div#admin-header {
+   background-color: #272932;
+   color: #3C8AAE; 
+   width: 80%;
+   margin: auto;
+   padding: 30px;	
+   border: 2px solid black;
+   -moz-border-radius: 8px;
+   -webkit-border-radius: 8px; 
 }
 
 div#admin_console {
