Adding admin page as default.

--- a/core/templates/campaign_edit_content.html
+++ b/core/templates/campaign_edit_content.html
@@ -246,7 +246,7 @@ $("#li-facebook-fan").hide();
 		success: function(data){
                         $("#update-campaign").showLoading(
                                               {'afterShow': function(){ 
-                                                            setTimeout( "window.location.href = '{% url campaign_admin chash=campaign.chash %}'", 10 );
+                                                            //setTimeout( "window.location.href = '{% url campaign_admin chash=campaign.chash %}'", 10 );
                                                                       }
                                               }
                                               );
