--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -13,8 +13,9 @@ Convert Event Attendees Into Evangelists <br /><br /><br />...So That Your Event
 </div>
 
 <br/><br/><br/><br/><br/>
-<div id="content-front">
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_251a4028"><param name="movie" value="http://www.viddler.com/player/251a4028/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/251a4028/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_251a4028"></embed></object>
+<div id="tryit-div">
+<br/>Try It Now&nbsp;&nbsp;&nbsp;(It's Free)
+<!--<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_251a4028"><param name="movie" value="http://www.viddler.com/player/251a4028/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/251a4028/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_251a4028"></embed></object>-->
 </div>
 
 
@@ -25,11 +26,21 @@ Convert Event Attendees Into Evangelists <br /><br /><br />...So That Your Event
 <!--<div id="social-plugin">
 <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FRippleFunction%2F155806427771546&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=recommend&amp;colorscheme=light&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
 </div>-->
+
+<script>
+$("#tryit-div").click(function(){
+    location.href = '{%url create_campaign%}';
+});
+
+$("#tryit-div").hover(function(){
+    $(this).css({"font-size":"30px"});
+    
+}, function(){
+    $(this).css({"font-size":"26px"});
+});
+</script>
+
+
 {% endblock %}
 
 
-	
-
-</div>
-</BODY>
-</HTML>
