--- a/static/css/campaign_widget.css
+++ b/static/css/campaign_widget.css
@@ -1,3 +1,11 @@
+body {
+        text-align: center;
+}
+
+div.create {
+     text-align: center;
+}
+
 #ripple-embed {
 	      margin:auto;
 	      margin-top: 13px;
