Adding Title tage for SEO.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -1,7 +1,7 @@
 {%extends 'site_base.html' %}
 
 {% block title %}
-Analytics
+Event Promotion - Analytics
 {% endblock %}
 
 {% block  js_css_include %}
