--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -6,7 +6,7 @@
  	<link rel="stylesheet" href="{% url static 'css/about.css' %}" type="text/css" />
 	{% endblock %}
 
-{% block title %}About{% endblock %}
+{% block title %}Event Promotion - About{% endblock %}
 
 
 {% block site-content %}
