--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -20,7 +20,7 @@
  
 {% endblock %} 
 
-{% block title %}{{campaign.title}}{% endblock %}
+{% block title %}Event Promotions - Viral Incentive Referrals Tool - {{campaign.title}}{% endblock %}
 
 {% block site-content %}
 
