--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% url static 'css/landingA.css' %}" type="text/css" />
 
 
-    <title>{{campaign.title}}</title>
+    <title>Event Promotions - Viral Incentive Referrals Tool - {{campaign.title}}</title>
 
   </head>
 <body>
