--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -6,7 +6,7 @@
  	<link rel="stylesheet" href="{% url static 'css/about.css' %}" type="text/css" />
 	{% endblock %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Event Promotion - Contact{% endblock %}
 
 
 {% block site-content %}
