--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -19,7 +19,7 @@
  	<link rel="stylesheet" href="{% url static 'css/create.css' %}" type="text/css" >
 {% endblock %} 
 
-{% block title %}Create{% endblock %}
+{% block title %}Event Promotions - Viral Incentive Referrals Tool - Create{% endblock %}
 
 {% block site-content %}
 <BR><BR><BR><BR>
