--- a/core/templates/howitworks.html
+++ b/core/templates/howitworks.html
@@ -6,7 +6,7 @@
  	<link rel="stylesheet" href="{% url static 'css/howitworks.css' %}" type="text/css" />
 	{% endblock %}
 
-{% block title %}How It Works{% endblock %}
+{% block title %}Event Promotions - Viral Incentive Referrals Tool{% endblock %}
 
 
 {% block site-content %}
