--- a/core/templates/jobs.html
+++ b/core/templates/jobs.html
@@ -7,7 +7,7 @@
 	{% endblock %}
 
 
-{% block title %}About{% endblock %}
+{% block title %}Event Promotions - Viral Incentive Referrals Tool - Jobs{% endblock %}
 
 
 {% block site-content %}
