--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -1,6 +1,6 @@
 {% extends "site_base.html" %}
 
-{% block title %}Ripple Function{% endblock %}
+{% block title %}Event Promotions - Viral Incentive Referrals Tool{% endblock %}
 
 {% block  js_css_include %}
 <link type="text/css" href="{% url static 'css/frontpage_style.css' %}" rel="stylesheet">
