--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -14,7 +14,7 @@ Convert Event Attendees Into Evangelists <br /><br /><br />...So That Your Event
 
 <br/><br/><br/><br/><br/>
 <div id="tryit-div">
-<br/>Try It Now&nbsp;&nbsp;&nbsp;(It's Free)
+<br/>Try It Now
 <!--<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_251a4028"><param name="movie" value="http://www.viddler.com/player/251a4028/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/251a4028/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_251a4028"></embed></object>-->
 </div>
 
